Removed overflow=hidden from image-container-constrain to try to fix image problems

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,6 @@ input, select, textarea {
 
 .image-container-constrain {
 	max-width: 100%;
-	overflow: hidden;
 }
 
 /* Image container for small, left images */
